added query to fetch only future events

--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-
+    <!-- MD Bootstrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/js/mdb.min.js"></script>
+    <!-- Custom carousel behaviour -->
+    <script src="src/assets/scripts/carousel.js"></script>
     
     <!--Font Awesome import-->
     <script src="https://use.fontawesome.com/f8adea8918.js"></script>
