--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>חדשות החזית</title>
     <!--Favicon-->
-    <link rel="shortcut icon" href="./src/assets/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="http://res.cloudinary.com/dqvimfd8b/image/upload/v1514481019/alf-israel/favicon/favicon.ico" type="image/x-icon">
     
     <!--Boostrap 4 cdns-->
     <!-- Latest compiled and minified CSS -->
