added investigations page with a google map and started to enter the data. TODO: hide pin labels if zoom is less than 10

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,10 @@
 
     <!--Arimo font import-->
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+    
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvqXv9O9dgNZdpZ_AhT2S84nZlA2vKB0c">
+    </script>
   </head>
   <body>
     <div id="app"></div>
