--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/js/mdb.min.js"></script>
     <!-- Custom carousel behaviour -->
-    <script src="src/assets/scripts/scripts.js"></script>
+    <script>
+      $( document ).ready(function() {
+        $('.carousel').carousel({
+          interval: 4000,
+          cycle: true,
+          pause: "null"
+        })
+        $('.navbar-nav>li>.hide-collapse').on('click', function(){
+          $('.navbar-collapse').collapse('hide')
+        })
+      })
+    </script>
     
     <!--Font Awesome import-->
     <script src="https://use.fontawesome.com/f8adea8918.js"></script>
