--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:url" content="https://www.alf-israel.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="חדשות החזית" />
+    <meta property="og:image" content="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515705896/alf-israel/about/about.jpg" />
     <title>חדשות החזית</title>
     <!--Favicon-->
     <link rel="shortcut icon" href="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515476502/alf-israel/favicon/faviconNew.ico" type="image/x-icon">
