changed a color theme on mobile browser and made whatsapp sharing button work on desktops and phones using whatsapp api (thank you david)

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -63,10 +63,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvqXv9O9dgNZdpZ_AhT2S84nZlA2vKB0c">
     </script>
 
-    <title>vue-ssr-starter-kit</title>
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <meta name="theme-color" content="#f60">
+    <meta name="theme-color" content="#2E2E2E">
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
