added google verification code

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,6 +5,9 @@
     {{{ meta.inject().title.text() }}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="google-site-verification" content="wH2GdwT3IRtT3vsYqyBG8EkDAk6cIB7_wyiTm64cHcY" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#2E2E2E">
     <!--Favicon-->
     <link rel="shortcut icon" href="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515476502/alf-israel/favicon/faviconNew.ico" type="image/x-icon">
     
@@ -63,8 +66,6 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvqXv9O9dgNZdpZ_AhT2S84nZlA2vKB0c">
     </script>
 
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#2E2E2E">
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
