--- a/src/index.template.html
+++ b/src/index.template.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css">
     <!--Arimo font import-->
     <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+    <!--Swiper CSS-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
     <!--SSR Voodoo-->
     <% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
@@ -36,30 +39,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/js/mdb.min.js"></script>
     <!--Font Awesome JS-->
     <script src="https://use.fontawesome.com/f8adea8918.js"></script>
+    <!--Swiper JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
     <!--Custom jQuery magic that I am NOT proud of-->
     <script>
       $( document ).ready(function() {
 
-        $('.carousel').carousel({
-          interval: 4000,
-          cycle: true,
-          pause: "null"
-        })
-
-        $(".carousel").on("touchstart", function(event){
-          var xClick = event.originalEvent.touches[0].pageX
-          $(this).one("touchmove", function(event){
-            var xMove = event.originalEvent.touches[0].pageX
-            if( Math.floor(xClick - xMove) > 5 ){
-                $(this).carousel('next')
-            }
-            else if( Math.floor(xClick - xMove) < -5 ){
-                $(this).carousel('prev')
-            }
-          })
-          $(".carousel").on("touchend", function(){
-                  $(this).off("touchmove")
-          })
+        var mySwiper = new Swiper ('.swiper-container', {
+          loop: true,
+          navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+          },
+          autoplay: {
+            delay: 4000,
+          }
         })
 
         $('.navbar-nav>li>.hide-collapse').on('click', function(){
