Chnaged everything ALF - related to TotalLiberationIsrael

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,7 +9,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2E2E2E">
     <!--Favicon-->
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515476502/alf-israel/favicon/faviconNew.ico" 
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515476502/alf-israel/favicon/favicon-32x32.png" 
       type="image/x-icon">    
     <!--Bootstrap 4 and MD Bootstrap CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
@@ -57,14 +57,14 @@
       {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "description": "האתר הרשמי של החזית לשחרור בעלי החיים ישראל",
-        "url" : "https://www.alf-israel.com/",
-        "name": "חדשות החזית",
-        "logo": "http://res.cloudinary.com/dqvimfd8b/image/upload/v1513593801/alf-israel/home/2.jpg", 			
+        "description": "האתר הרשמי של שחרור מוחלט",
+        "url" : "https://www.totalliberationisrael.com/",
+        "name": "חדשות שחרור מוחלט",
+        "logo": "http://res.cloudinary.com/dqvimfd8b/image/upload/v1523615232/alf-israel/home/1.jpg", 			
         "sameAs" : [ 
-          "https://www.facebook.com/Alfront/",
+          "https://www.facebook.com/totalliberationisrael/",
           "https://www.youtube.com/user/GlassWallsIsrael/",
-          "https://www.instagram.com/alf_israel/"
+          "https://www.instagram.com/total_liberation_israel/"
         ]
       }
     </script>
