Added new google verification code and google analytic shit

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -5,7 +5,7 @@
     {{{ meta.inject().title.text() }}}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="google-site-verification" content="wH2GdwT3IRtT3vsYqyBG8EkDAk6cIB7_wyiTm64cHcY" />
+    <meta name="google-site-verification" content="TY1CdtAWeyhuwzfpcXQ8WmzQGyzuAiPA6cwxFzBZDKo" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#2E2E2E">
     <!--Favicon-->
@@ -41,15 +41,16 @@
     <script src="https://use.fontawesome.com/f8adea8918.js"></script>
 
     <div id="fb-root"></div>
-    <!-- <script>
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.12&appId=333838503789412&autoLogAppEvents=1';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script> -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118249584-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-118249584-1');
+    </script>
 
     <!-- Custom jQuery magic that I am NOT proud of -->
     <script>
