--- a/src/index.template.html
+++ b/src/index.template.html
@@ -8,17 +8,13 @@
 	<meta name="google-site-verification" content="TY1CdtAWeyhuwzfpcXQ8WmzQGyzuAiPA6cwxFzBZDKo" />
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="theme-color" content="#2E2E2E">
-	<!--Favicon-->
 	<link rel="shortcut icon" href="https://res.cloudinary.com/dqvimfd8b/image/upload/v1515476502/alf-israel/favicon/favicon-32x32.png"
-	 type="image/x-icon">
-	<!--Bootstrap 4 and MD Bootstrap CSS-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/css/mdb.min.css">
-	<!--Arimo font import-->
+		type="image/x-icon">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link rel="stylesheet" href="https://rawgit.com/atechni/materialize-rtl-support/v1.0.0/dist/css/	materialize.rtl.min.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-	<!--Swiper CSS-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
-	<!--SSR Voodoo-->
 	<% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
@@ -28,16 +24,17 @@
 
 <body>
 	<!--vue-ssr-outlet-->
-
-	<!--jQuery-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!--Popper JS-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-	<!--Bootstrap 4 JS-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
-	<!--MD Bootstrap JS-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.3/js/mdb.min.js"></script>
-	<!--Font Awesome JS-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script>
+		document.addEventListener('DOMContentLoaded', function() {
+    	let elems = document.querySelectorAll('.sidenav');
+    	let instances = M.Sidenav.init(elems, { alignment: 'right' });
+		});
+		document.addEventListener('DOMContentLoaded', function() {
+    	let elems = document.querySelectorAll('.dropdown-trigger');
+    	let instances = M.Dropdown.init(elems, {});
+  	});
+	</script>
 	<script src="https://use.fontawesome.com/f8adea8918.js"></script>
 
 	<div id="fb-root"></div>
@@ -50,17 +47,6 @@
 		gtag('js', new Date());
 
 		gtag('config', 'UA-118249584-1');
-	</script>
-
-	<!-- Custom jQuery magic that I am NOT proud of -->
-	<script>
-		$(document).ready(function () {
-
-			$('.navbar-nav>li>.hide-collapse').on('click', function () {
-				$('.navbar-collapse').collapse('hide')
-			})
-
-		})
 	</script>
 	<!--Google maps API-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvqXv9O9dgNZdpZ_AhT2S84nZlA2vKB0c"></script>
