migrate contact and events components

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -30,7 +30,7 @@
 		let dropdownElements = document.querySelectorAll('.dropdown-trigger');
 		M.Dropdown.init(dropdownElements, { alignmewnt: 'center' });
     	let sideNavElements = document.querySelectorAll('.sidenav');
-		M.Sidenav.init(sideNavElements, { edge: 'right' });
+		M.Sidenav.init(sideNavElements, {});
 	});
 	</script>
 	<script src="https://use.fontawesome.com/f8adea8918.js"></script>
