--- a/src/index.template.html
+++ b/src/index.template.html
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="https://rawgit.com/atechni/materialize-rtl-support/v1.0.0/dist/css/	materialize.rtl.min.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	<% for (var chunk of webpack.chunks) {
         for (var file of chunk.files) {
           if (file.match(/\.(js|css)$/)) { %>
@@ -27,13 +28,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
-		let dropdownElements = document.querySelectorAll('.dropdown-trigger');
-		M.Dropdown.init(dropdownElements, { alignmewnt: 'center' });
-    	let sideNavElements = document.querySelectorAll('.sidenav');
-		M.Sidenav.init(sideNavElements, {});
+      let dropdownElements = document.querySelectorAll('.dropdown-trigger');
+      let dropDownInstances = M.Dropdown.init(dropdownElements, { alignment: 'center' });
+      let sideNavElements = document.querySelectorAll('.sidenav');
+      let sidenavInstances = M.Sidenav.init(sideNavElements, {});
 	});
 	</script>
-	<script src="https://use.fontawesome.com/f8adea8918.js"></script>
 
 	<div id="fb-root"></div>
 
